bpo-37446: resolve undefined behavior in Python/hamt.c